Fix T55644: Multires ignores render subdivision when simplified

We did not tell proper render/viewport context to subsurf derived mesh
created for multires.